# Quick-Box-Quotation

./: BoxQuotation.cpp  CMakeLists.txt  LICENSE  Readme.md  main.cpp
lib/: SystemTray.h
resources/: resource.h  resources.rc
src/: SystemTray.cpp
